package cn.thinkinjava.design.pattern.behavior.observer.frame;

/**
 * 具体观察者实现
 *
 * @author qiuxianbao
 * @date : 2023/1/13
 */
public class ConcreteObserver implements Observer{

    @Override
    public void update() {

    }
}
