package cn.thinkinjava.design.pattern.behavior.observer.frame;

/**
 * 观察者接口角色
 *
 * @author qiuxianbao
 * @date : 2023/1/13
 */
public interface Observer {
    void update();
}
